refactor: align all apps with 100% modern Java 25 standards